--- a/mf-aliases/apps/rspack-nx-mf/apps/remote/project.json
+++ b/mf-aliases/apps/rspack-nx-mf/apps/remote/project.json
@@ -1,5 +1,5 @@
 {
-  "name": "remote",
+  "name": "@mf-aliases/remote",
   "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/rspack-nx-mf/apps/remote/src",
   "projectType": "application",
