--- a/mf-aliases/package.json
+++ b/mf-aliases/package.json
@@ -11,7 +11,7 @@
     "@nx/eslint-plugin": "21.1.2",
     "@nx/jest": "21.1.2",
     "@nx/js": "21.1.2",
-    "@nx/module-federation": "../../nx/build/packages/module-federation",
+    "@nx/module-federation": "21.1.2",
     "@nx/react": "^21.1.2",
     "@nx/rspack": "21.1.2",
     "@nx/web": "21.1.2",
